# fuzzy-waddle

./: .pre-commit-config.yaml  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  README.md  noxfile.py  pyproject.toml  setup.cfg
.github/workflows/: deploy.yml  test.yml
doc/: index.md
doc/content/: installation.md  quickstart.md
src/fuzzy_waddle/: __init__.py
src/fuzzy_waddle/utils/: parser.py
tests/: test_main.py
