[metadata]
name = fuzzy_waddle
version = 1.0.0
author = Roland Kaminski
author_email = test@test.de
description = A template project.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://potassco.org/

[options]
packages = find:
package_dir =
    =src
python_requires = >=3.9
include_package_data = True

[options.packages.find]
where = src

[options.extras_require]
format =
    black
    isort
    autoflake
lint_pylint =
    pylint
typecheck =
    types-setuptools
    mypy
test =
    coverage[toml]
doc =
    sphinx
    furo
    nbsphinx
    sphinx_copybutton
    myst-parser
dev =
    fuzzy_waddle[test,typecheck,lint_pylint]

[options.entry_points]
console_scripts =
    fuzzy_waddle = fuzzy_waddle.__main__:main
